# gander

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  index.html  main.js  main.py  pyproject.toml  requirements.txt
api/: db.py  dependencies.py  ingest_songs.py  main.py  models.py
api/routers/: albums.py  artists.py  filter.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/api/: borrow_album_art.py  borrow_artist_pic.py  db.py  ingest_songs.py  main.py  models.py
backend/api/routers/: albums.py  artists.py  filter.py  songs.py
docs/adr/: 0001-user-authentication.md
docs/agents/: domain.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: config.js  index.css  index.js
frontend/src/components/: AlbumAll.js  AlbumGrid.css  AlbumGrid.js  AlbumSongs.css  AlbumSongs.js  AllArtists.js  ArtistAll.js  ArtistGrid.css  ArtistGrid.js  ArtistPage.css  ArtistPage.js  Header.css  Header.js  HighlightedName.css  HighlightedName.js  Ingest.js  RandomSongs.js  Search.css  Search.js  SongItem.js  SongList.css  SongList.js  SongsAll.css  SongsAll.js  SongsFavourites.js  SongsRandom.css  SongsRandom.js
