[project]
name = "gander"
version = "0.1.0"
description = "App to catalogue my Artlist downloads."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "tinytag>=2.1.1",
]

[dependency-groups]
dev = [
    "rich>=14.0.0",
]
